added more styling for mobile

--- a/productpage.html
+++ b/productpage.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="css/productpage.css" />
-  <link rel="stylesheet" href="css/root.css" />
-  <link rel="stylesheet" href="css/cart.css" />
-  <link rel="stylesheet" href="css/menu.css" />
+  <link rel="stylesheet" href="css/productpage.css">
+  <link rel="stylesheet" href="css/root.css">
+  <link rel="stylesheet" href="css/cart.css">
+  <!-- <link rel="stylesheet" href="css/menu.css"> -->
   <title>Document</title>
 </head>
 
@@ -32,218 +32,225 @@
       <a href="#" class="cart-to-checkout"><button>Proceed to checkout</button></a>
     </div>
   </header>
-  <section class="sec-hamburger">
-    <div class="head-hamburger">
-      <img class="close-icon" src="assets/cross-white.png" alt="X for closing hamburgermenu" />
-    </div>
+  <main>
+    <!-- <section class="sec-hamburger">
+      <div class="head-hamburger">
+        <img class="close-icon" src="assets/cross-white.png" alt="X for closing hamburgermenu" />
+      </div>
 
-    <div class="body-hamburger">
-      <div class="body-hamburger-text">
-        <a href="home.html">
-          <h1>HOME</h1>
-        </a>
+      <div class="body-hamburger">
+        <div class="body-hamburger-text">
+          <a href="home.html">
+            <h1>HOME</h1>
+          </a>
 
-        <h1 class="hamcat-shop">SHOP</h1>
-        <div class="pages-shop pages hidden">
-          <a href="productlist.html">
-            <h2>KITS</h2>
-          </a>
-          <a href="productlist.html">
-            <h2>REFILLS</h2>
-          </a>
-          <a href="productlist.html">
-            <h2>CASTING</h2>
-          </a>
-        </div>
-        <div class="big-pages big-pages-shop hidden">
-          <div class="big-pages-header">
-            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="BYU studio logo" />
+          <h1 class="hamcat-shop">SHOP</h1>
+          <div class="pages-shop pages hidden">
+            <a href="productlist.html">
+              <h2>KITS</h2>
+            </a>
+            <a href="productlist.html">
+              <h2>REFILLS</h2>
+            </a>
+            <a href="productlist.html">
+              <h2>CASTING</h2>
+            </a>
           </div>
-          <div class="big-pages-body-flex">
-            <div class="big-pages-body">
-              <a href="productlist.html">
-                <img class="ham-cat-image" src="assets/shop-blur.png" alt="" />
-                <div class="big-link-flex">
-                  <h2>KITS</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                </div>
-              </a>
-              <a href="productlist.html">
-                <img class="ham-cat-image" src="assets/refills-blur.png" alt="ring made from blue wax" />
-                <div class="big-link-flex">
-                  <h2>REFILLS</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                </div>
-              </a>
-              <a href="productlist.html">
-                <img class="ham-cat-image" src="assets/casting-blur.png" alt="hands with several unique silver rings" />
-                <div class="big-link-flex">
-                  <h2>CASTING</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                </div>
-              </a>
+          <div class="big-pages big-pages-shop hidden">
+            <div class="big-pages-header">
+              <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="BYU studio logo" />
+            </div>
+            <div class="big-pages-body-flex">
+              <div class="big-pages-body">
+                <a href="productlist.html">
+                  <img class="ham-cat-image" src="assets/shop-blur.png" alt="" />
+                  <div class="big-link-flex">
+                    <h2>KITS</h2>
+                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  </div>
+                </a>
+                <a href="productlist.html">
+                  <img class="ham-cat-image" src="assets/refills-blur.png" alt="ring made from blue wax" />
+                  <div class="big-link-flex">
+                    <h2>REFILLS</h2>
+                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  </div>
+                </a>
+                <a href="productlist.html">
+                  <img class="ham-cat-image" src="assets/casting-blur.png"
+                    alt="hands with several unique silver rings" />
+                  <div class="big-link-flex">
+                    <h2>CASTING</h2>
+                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="big-pages-footer">
+              <p>hello@byustudio.dk | +45 12 34 56 78</p>
             </div>
           </div>
-          <div class="big-pages-footer">
-            <p>hello@byustudio.dk | +45 12 34 56 78</p>
-          </div>
-        </div>
 
-        <h1 class="hamcat-about">ABOUT BYÙ STUDIO</h1>
-        <div class="pages-about pages hidden">
-          <a href="about.html">
-            <h2>ABOUT US</h2>
-          </a>
-          <a href="manifesto.html">
-            <h2>MANIFESTO</h2>
-          </a>
-          <a href="sustainanability.html">
-            <h2>SUSTAINABILITY</h2>
-          </a>
-          <a href="contact.html">
-            <h2>CONTACT US</h2>
-          </a>
-        </div>
-        <div class="big-pages big-pages-about hidden">
-          <div class="big-pages-header">
-            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="" />
+          <h1 class="hamcat-about">ABOUT BYÙ STUDIO</h1>
+          <div class="pages-about pages hidden">
+            <a href="about.html">
+              <h2>ABOUT US</h2>
+            </a>
+            <a href="manifesto.html">
+              <h2>MANIFESTO</h2>
+            </a>
+            <a href="sustainanability.html">
+              <h2>SUSTAINABILITY</h2>
+            </a>
+            <a href="contact.html">
+              <h2>CONTACT US</h2>
+            </a>
           </div>
-          <div class="big-pages-body-flex">
-            <div class="big-pages-body">
-              <a href="about.html">
-                <img class="ham-cat-image" src="assets/about-blur.png" alt="" />
-                <div class="big-link-flex">
-                  <h2>ABOUT US</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                </div>
-              </a>
-              <a href="manifesto.html">
-                <img class="ham-cat-image" src="assets/manifesto-blur.png" alt="" />
-                <div class="big-link-flex">
-                  <h2>MANIFESTO</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                </div>
-              </a>
-              <a href="sustainanability.html">
-                <img class="ham-cat-image" src="assets/sustainability-blur.png" alt="" />
-                <div class="big-link-flex">
-                  <h2>SUSTAINABILITY</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                </div>
-              </a>
-              <a href="contact.html">
-                <img class="ham-cat-image" src="assets/contact-blur.png" alt="" />
-                <div class="big-link-flex">
-                  <h2>CONTACT US</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                </div>
-              </a>
+          <div class="big-pages big-pages-about hidden">
+            <div class="big-pages-header">
+              <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="" />
+            </div>
+            <div class="big-pages-body-flex">
+              <div class="big-pages-body">
+                <a href="about.html">
+                  <img class="ham-cat-image" src="assets/about-blur.png" alt="" />
+                  <div class="big-link-flex">
+                    <h2>ABOUT US</h2>
+                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  </div>
+                </a>
+                <a href="manifesto.html">
+                  <img class="ham-cat-image" src="assets/manifesto-blur.png" alt="" />
+                  <div class="big-link-flex">
+                    <h2>MANIFESTO</h2>
+                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  </div>
+                </a>
+                <a href="sustainanability.html">
+                  <img class="ham-cat-image" src="assets/sustainability-blur.png" alt="" />
+                  <div class="big-link-flex">
+                    <h2>SUSTAINABILITY</h2>
+                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  </div>
+                </a>
+                <a href="contact.html">
+                  <img class="ham-cat-image" src="assets/contact-blur.png" alt="" />
+                  <div class="big-link-flex">
+                    <h2>CONTACT US</h2>
+                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="big-pages-footer">
+              <p>hello@byustudio.dk | +45 12 34 56 78</p>
             </div>
           </div>
-          <div class="big-pages-footer">
-            <p>hello@byustudio.dk | +45 12 34 56 78</p>
-          </div>
-        </div>
 
-        <h1 class="hamcat-start">GET STARTED</h1>
-        <div class="pages-getstarted pages hidden">
-          <a href="faq.html">
-            <h2>FAQ</h2>
-          </a>
-          <a href="inspiration.html">
-            <h2>INSPIRATION</h2>
-          </a>
-          <a href="tutorial.html">
-            <h2>TUTORIALS</h2>
-          </a>
-        </div>
-        <div class="big-pages big-pages-getstarted hidden">
-          <div class="big-pages-header">
-            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="" />
+          <h1 class="hamcat-start">GET STARTED</h1>
+          <div class="pages-getstarted pages hidden">
+            <a href="faq.html">
+              <h2>FAQ</h2>
+            </a>
+            <a href="inspiration.html">
+              <h2>INSPIRATION</h2>
+            </a>
+            <a href="tutorial.html">
+              <h2>TUTORIALS</h2>
+            </a>
           </div>
-          <div class="big-pages-body-flex">
-            <div class="big-pages-body">
-              <a href="faq.html">
-                <img class="ham-cat-image" src="assets/faq-blur.png" alt="" />
-                <div class="big-link-flex">
-                  <h2>FAQ</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                </div>
-              </a>
-              <a href="inspiration.html">
-                <img class="ham-cat-image" src="assets/inspiration-blur.png" alt="ring made from blue wax" />
-                <div class="big-link-flex">
-                  <h2>INSPIRATION</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                </div>
-              </a>
-              <a href="tutorial.html">
-                <img class="ham-cat-image" src="assets/tutorials-blur.png"
-                  alt="hands with several unique silver rings" />
-                <div class="big-link-flex">
-                  <h2>Tutorials</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                </div>
-              </a>
+          <div class="big-pages big-pages-getstarted hidden">
+            <div class="big-pages-header">
+              <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="" />
             </div>
-          </div>
-          <div class="big-pages-footer">
-            <p>hello@byustudio.dk | +45 12 34 56 78</p>
+            <div class="big-pages-body-flex">
+              <div class="big-pages-body">
+                <a href="faq.html">
+                  <img class="ham-cat-image" src="assets/faq-blur.png" alt="" />
+                  <div class="big-link-flex">
+                    <h2>FAQ</h2>
+                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  </div>
+                </a>
+                <a href="inspiration.html">
+                  <img class="ham-cat-image" src="assets/inspiration-blur.png" alt="ring made from blue wax" />
+                  <div class="big-link-flex">
+                    <h2>INSPIRATION</h2>
+                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  </div>
+                </a>
+                <a href="tutorial.html">
+                  <img class="ham-cat-image" src="assets/tutorials-blur.png"
+                    alt="hands with several unique silver rings" />
+                  <div class="big-link-flex">
+                    <h2>Tutorials</h2>
+                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="big-pages-footer">
+              <p>hello@byustudio.dk | +45 12 34 56 78</p>
+            </div>
           </div>
         </div>
       </div>
+      <div class="footer-hamburger someiconflex">
+        <a href="https://www.instagram.com/" target="_blank"><img class="somelogo" src="assets/instagram-white.png"
+            alt="Instagram logo" /></a>
+        <a href="https://www.facebook.com/" target="_blank"><img class="somelogo" src="assets/facebook-white.png"
+            alt="Facebook logo" /></a>
+        <a href="https://www.pinterest.com/" target="_blank"><img class="somelogo" src="assets/pinterest-white.png"
+            alt="Pinterest logo" /></a>
+      </div>
+    </section> -->
+    <!-- img+.breadcrumbs>p*3^.top-details>h1+h2>span^^h2*2+p+h2+(button+p)*2+h2+.total-add-container>.total-container>h2+p^^button -->
+    <img src="assets/bgg 1.jpg" alt="" class="product-image">
+    <div class="breadcrumbs flex-container">
+      <a href="">
+        <p>Kits</p>
+      </a>
+      <p>&nbsp;/&nbsp;</p>
+      <p>Family kit</p>
     </div>
-    <div class="footer-hamburger someiconflex">
-      <a href="https://www.instagram.com/" target="_blank"><img class="somelogo" src="assets/instagram-white.png"
-          alt="Instagram logo" /></a>
-      <a href="https://www.facebook.com/" target="_blank"><img class="somelogo" src="assets/facebook-white.png"
-          alt="Facebook logo" /></a>
-      <a href="https://www.pinterest.com/" target="_blank"><img class="somelogo" src="assets/pinterest-white.png"
-          alt="Pinterest logo" /></a>
+    <div class="top-details flex-container">
+      <h1>Kit title</h1>
+      <h2>DKK <span>100</span></h2>
     </div>
-  </section>
-  <!-- img+.breadcrumbs>p*3^.top-details>h1+h2>span^^h2*2+p+h2+(button+p)*2+h2+.total-add-container>.total-container>h2+p^^button -->
-  <img src="assets/bgg 1.jpg" alt="" class="product-image">
-  <div class="breadcrumbs flex-container">
-    <a href="">
-      <p>Kits</p>
-    </a>
-    <p>&nbsp;/&nbsp;</p>
-    <p>Family kit</p>
-  </div>
-  <div class="top-details flex-container">
-    <h1>Kit title</h1>
-    <h2>DKK <span>100</span></h2>
-  </div>
-  <h2>What is in the kit</h2>
-  <p>Item 1, item 2, item 3</p>
-  <h2>Extras</h2>
-  <div class="flex-container">
-    <div>
-      <button>Extra wax</button>
-      <p>35 DKK</p>
+    <h2>What is in the kit</h2>
+    <p>Item 1, item 2, item 3</p>
+    <h2>Extras</h2>
+    <div class="flex-container">
+      <div class="selection-flex">
+        <button>Extra wax</button>
+        <p>35 DKK</p>
+      </div>
+      <div class="selection-flex">
+        <button>Extra gemstone</button>
+        <p>See prices on dropdown</p>
+      </div>
     </div>
-    <div>
-      <button>Extra gemstone</button>
-      <p>See prices on dropdown</p>
+    <form>
+      <h2>Prepay for casting</h2>
+      <input type="radio" id="silver" name="casting" value="silver">
+      <label for="silver">Yes, cast my piece in SILVER</label><br>
+      <input type="radio" id="gold" name="casting" value="gold">
+      <label for="gold">Yes, cast my piece in GOLD</label><br>
+      <input type="radio" id="nothing" name="casting" value="nothing">
+      <label for="nothing">I will order casting later</label><br>
+    </form>
+    <div class="total-add-container">
+      <div class="total-container flex-container">
+        <h2>Your total</h2>
+        <p>DKK <span>300</span></p>
+      </div>
+      <div class="align-button">
+        <button class="add-to-cart">Add to cart</button></div>
     </div>
-  </div>
-  <form>
-    <h2>Prepay for casting</h2>
-    <input type="radio" id="silver" name="casting" value="silver">
-    <label for="silver">Yes, cast my piece in SILVER</label><br>
-    <input type="radio" id="gold" name="casting" value="gold">
-    <label for="gold">Yes, cast my piece in GOLD</label><br>
-    <input type="radio" id="nothing" name="casting" value="nothing">
-    <label for="nothing">I will order casting later</label><br>
-  </form>
-  <div class="total-add-container">
-    <div class="total-container flex-container">
-      <h2>Your total</h2>
-      <p>DKK <span>300</span></p>
-    </div>
-  </div>
-  <button>Add to cart</button>
+  </main>
+  <footer>
+
+  </footer>
   <!-- cart template ↓ -->
   <template>
     <section class="cart-card">
@@ -263,7 +270,7 @@
   </template>
 </body>
 <script src="js/cart.js"></script>
-<script src="js/hamburger.js"></script>
+<!-- <script src="js/hamburger.js"></script> -->
 <script src="js/product-page-dynamics.js"></script>
 
 </html>
