removed padding 0 margin 0 from root

--- a/productpage.html
+++ b/productpage.html
@@ -227,10 +227,13 @@
         <p>35 DKK</p>
       </div>
       <div class="selection-flex">
-        <label for="gemstones">Extra gemstone</label>
+        <!-- <label for="gemstones">Extra gemstone</label> -->
 
         <select name="gemstones" id="gemstones">
-
+          <option value="">Extra gemstone</option>
+          <option value="red-stone">Red</option>
+          <option value="red-stone">Blue</option>
+          <option value="red-stone">Pink</option>
         </select>
         <p>See prices on dropdown</p>
       </div>
