populated with data

--- a/productpage.html
+++ b/productpage.html
@@ -208,17 +208,17 @@
     <img src="assets/family-kit-box.png" alt="" class="product-image">
     <div class="breadcrumbs flex-container">
       <a href="">
-        <p>Kits</p>
+        <p class="category-breadcrumb">else</p>
       </a>
       <p>&nbsp;/&nbsp;</p>
-      <p>Family kit</p>
+      <p class="product-breadcrumb">Family kit</p>
     </div>
     <div class="top-details flex-container">
       <h1>Kit title</h1>
       <h2>DKK <span>100</span></h2>
     </div>
     <h2>What is in the kit</h2>
-    <p>Item 1, item 2, item 3</p>
+    <p class="kit-content">Item 1, item 2, item 3</p>
     <h2>Extras <span>?</span></h2>
     <div class="flex-container">
       <div class="selection-flex">
@@ -262,6 +262,14 @@
       <div class="align-button">
         <button class="add-to-cart">Add to cart</button></div>
     </div>
+    <h3>Description</h3>
+    <p class="kit-description"></p>
+    <h3>Step-by-step</h3>
+    <p></p>
+    <h3>Frequently asked questions</h3>
+    <p></p>
+    <h3>Our customers made</h3>
+    <p></p>
   </main>
   <footer>
 
