--- a/home.html
+++ b/home.html
@@ -22,8 +22,10 @@
             <img id="yellowText" src="assets/jewellery.svg" alt="decorative-heading" />
           </div>
         </h1>
-        <img id="heroImg" src="assets/hero_img.jpg" alt="hero-img" />
-        <img src="assets/pattern-homepage.svg" id="background"alt="">      
+        <img class="heroImg" id="heroDesk" src="assets/hero_img.jpg" alt="hero-img" />
+        <img class="heroImg" id="heroMob" src="assets/hero-mobile.jpg" alt="hero-img" />
+        <img  src="assets/pattern-homepage.svg" id="background" alt="">  
+        <img id="bgMob" src="assets/bg-patternm.svg"  id="background-mobile" alt="">  
 </section>
       <section id="video">
         <video src="" controls poster="assets/hero_img.jpg"></video>
