changed icons (steps)

--- a/home.html
+++ b/home.html
@@ -38,19 +38,19 @@
         <h2>Order your kit today.</h2>
         <div id="stepsWrapper">
           <div class="oneStep">
-            <img src="css/small-circle.svg" alt="">
+            <img src="assets/step-one.svg" alt="">
             <h4>Choose your kit</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium feugiat pretium vitae duis rhoncus </p>
       </div>
     
       <div class="oneStep">
-        <img src="css/small-circle.svg" alt="">
+        <img src="assets/step-two.svg" alt="">
         <h4>Choose your kit</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium feugiat pretium vitae duis rhoncus </p>
       </div>
     
       <div class="oneStep">
-        <img src="css/small-circle.svg" alt="">
+        <img src="assets/step-three.svg" alt="">
         <h4>Choose your kit</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium feugiat pretium vitae duis rhoncus </p>
       </div>
