--- a/productlist.html
+++ b/productlist.html
@@ -249,6 +249,79 @@
         /></a>
       </div>
     </section>
+    <main>
+      <h2>Shop</h2>
+      <section class="filter"></section>
+      <section class="productlist">
+        <article class="product">
+          <img
+            src="assets/standard-kit_people.jpg"
+            alt="standard-kit_people"
+            class="img01"
+          />
+          <img src="" alt="" class="img02" />
+          <h3 class="product-title">*Title kit*</h3>
+        </article>
+        <article class="product">
+          <img
+            src="assets/kit-for-two_people.jpg"
+            alt="kit-for-two_people"
+            class="img01"
+          /><img src="" alt="" class="img02" />
+          <h3 class="product-title">*Title kit*</h3>
+        </article>
+        <article class="product">
+          <img
+            src="assets/family-kit_people.jpg"
+            alt="family-kit_people"
+            class="img01"
+          /><img src="" alt="" class="img02" />
+          <h3 class="product-title">*Title kit*</h3>
+        </article>
+      </section>
+    </main>
   </body>
+  <footer>
+    <img src="assets/Black_logo 1.svg" alt="logo-icon" />
+    <p id="description">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rhoncus viverra
+      consectetur adipiscing elit. Rhoncus viverra
+    </p>
+    <p id="contact">+45 12 34 56 78 | hello@byustudio.dk</p>
+    <div id="some">
+      <img src="assets/ig_logo.svg" alt="" /><img
+        src="assets/facebook_logo.svg"
+        alt=""
+      /><img src="assets/Vector.svg" alt="" />
+    </div>
+    <div id="footerNav">
+      <ul>
+        <li><h5>Shop</h5></li>
+        <li><a href="">Kits</a></li>
+        <li><a href="">Add-ons</a></li>
+        <li><a href="">Casting</a></li>
+      </ul>
+      <ul>
+        <li><h5>We Are</h5></li>
+        <li><a href="">About BYU</a></li>
+        <li><a href="">Manifestop</a></li>
+        <li><a href="">Sustainability</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+      <ul>
+        <li><h5>Get Started</h5></li>
+        <li><a href="">Inspiration</a></li>
+        <li><a href="">Tutorials</a></li>
+        <li><a href="">FAQ's</a></li>
+      </ul>
+    </div>
+    <div id="legal">
+      <a href="">Privacy policy | </a>
+      <a href="">FAQ's | </a>
+      <a href="">Customer service | </a>
+      <a href="">Shipping | </a>
+      <a href="">Terms and conditions</a>
+    </div>
+  </footer>
   <script src="js/hamburger.js"></script>
 </html>
