layout changes, grid and flex

--- a/productlist.html
+++ b/productlist.html
@@ -260,7 +260,7 @@
             class="img01"
           />
           <img src="" alt="" class="img02" />
-          <h3 class="product-title">*Title kit*</h3>
+          <h3 class="product-title">*Product title*</h3>
         </article>
         <article class="product">
           <img
@@ -268,7 +268,7 @@
             alt="kit-for-two_people"
             class="img01"
           /><img src="" alt="" class="img02" />
-          <h3 class="product-title">*Title kit*</h3>
+          <h3 class="product-title">*Product title*</h3>
         </article>
         <article class="product">
           <img
@@ -276,7 +276,15 @@
             alt="family-kit_people"
             class="img01"
           /><img src="" alt="" class="img02" />
-          <h3 class="product-title">*Title kit*</h3>
+          <h3 class="product-title">*Product title*</h3>
+        </article>
+        <article class="product">
+          <img
+            src="assets/family-kit_people.jpg"
+            alt="family-kit_people"
+            class="img01"
+          /><img src="" alt="" class="img02" />
+          <h3 class="product-title">*Product title*</h3>
         </article>
       </section>
     </main>
