added price info and styling

--- a/productlist.html
+++ b/productlist.html
@@ -260,7 +260,13 @@
             class="img01"
           />
           <img src="" alt="" class="img02" />
-          <h3 class="product-title">*Product title*</h3>
+          <div class="product-info">
+            <h3 class="product-title">*Product title*</h3>
+            <div class="price-and-arrow">
+              <p class="price"><span>*1000* </span>DKK</p>
+              <img src="assets/arrow-thin.png" alt="arrow-thin" class="arrow" />
+            </div>
+          </div>
         </article>
         <article class="product">
           <img
