--- a/about.html
+++ b/about.html
@@ -250,6 +250,61 @@
         /></a>
       </div>
     </section>
+    <section id="title">
+      <h1 id="decorative">Hi! My name is Bea</h1>
+      <img src="assets/about-image.jpg" alt="bea-about-image" />
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et parturient
+        magna nunc, lectus risus ultricies pellentesque. Semper lobortis
+        praesent elementum suspendisse auctor consectetur dui, eget in.
+      </p>
+    </section>
+    <section id="howItWorks">
+      <article>
+        <h2>What is BYU?</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam elit
+          auctor tortor faucibus commodo. Congue potenti tellus et ornare
+          consequat. Turpis tellus non dictum amet tempor. Quam sollicitudin
+          elementum lobortis non a pulvinar vulputate quis quis. Ac faucibus
+          quis pretium commodo ultrices varius. Sagittis arcu gravida cras vel
+          id. Vestibulum in tincidunt aliquam neque. Sed eget et vitae velit
+          accumsan. Id semper ac porta nunc viverra a. Imperdiet id a odio
+          eleifend volutpat enim dignissim urna. Risus eleifend.
+        </p>
+      </article>
+    </section>
+    <section id="stepByStep">
+      <h2>How it works</h2>
+      <div id="stepsWrapper">
+        <div class="oneStep">
+          <img src="css/small-circle.svg" alt="" />
+          <h4>Choose your kit</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium
+            feugiat pretium vitae duis rhoncus
+          </p>
+        </div>
+
+        <div class="oneStep">
+          <img src="css/small-circle.svg" alt="" />
+          <h4>Choose your kit</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium
+            feugiat pretium vitae duis rhoncus
+          </p>
+        </div>
+
+        <div class="oneStep">
+          <img src="css/small-circle.svg" alt="" />
+          <h4>Choose your kit</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium
+            feugiat pretium vitae duis rhoncus
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
   <script src="js/hamburger.js"></script>
 </html>
